docs: fix search z-index (#6554)

--- a/docs/static/styles/docsearch-custom.css
+++ b/docs/static/styles/docsearch-custom.css
@@ -21,3 +21,7 @@ button.DocSearch.DocSearch-Button {
 .DocSearch-Button-Keys {
   display: none;
 }
+
+.DocSearch {
+  z-index: 1000000000;
+}
